# xmonad-configuration

./: .gitignore  shell.nix  stack.yaml  xmonad-config.cabal  xmonad.hs
lib/XMonad/Config/ZsEdem/: Core.hs  Keys.hs  Menu.hs  Startup.hs
