name:                xmonad-config
version:             0.0.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/xmonad#readme
license:             BSD3
author:              Zsigmond Ádám Olivér
maintainer:          zsedem@gmail.com
copyright:           2015 Zsigmond Ádám Olivér
build-type:          Simple
cabal-version:       >=1.10

Flag Standalone
  Description: Compile for standalone without a desktop manager like xfce
  Default:     False

executable xmonad
  main-is:             xmonad.hs
  if flag(standalone)
    ghc-options:         -cpp -DSTANDALONE=1 -Wall -threaded -rtsopts -with-rtsopts=-N
  else
    ghc-options:         -cpp -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , xmonad
                     , xmonad-contrib
                     , containers
                     , X11
                     , directory
                     , mtl
                     , data-default
  hs-source-dirs:      ., lib
  default-language:    Haskell2010
